# titular

./: .gitignore  .mise.toml  AGENTS.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  build.rs  justfile  rust-toolchain.toml  rustfmt.toml
.cursor/rules/: rust.mdc
assets/themes/extended/tokyo-night/: Tokyo Night Light.sublime-color-scheme  Tokyo Night Storm.sublime-color-scheme  Tokyo Night.sublime-color-scheme
src/: color_filter.rs  color_manager.rs  config.rs  constants.rs  context.rs  context_manager.rs  controller.rs  dispatcher.rs  display.rs  error.rs  fallback_map.rs  fetcher.rs  formatter.rs  github.rs  lib.rs  log.rs  processor.rs  reader.rs  string_utils.rs  style_filter.rs  styler.rs  template_bundle.rs  templates.rs  term.rs  theme.rs  theme_palette.rs  transform.rs  utils.rs  writer.rs
src/filters/: append.rs  color.rs  hide.rs  markup.rs  mod.rs  pad.rs  style.rs  surround.rs
src/functions/: exit_code.rs  mod.rs
src/transforms/: ansi_formatter.rs  line_handler.rs  mod.rs  processor.rs  registry.rs  renderer.rs  transform.rs
templates/: ansible.tl  basic.tl  basic.tpl  box.tl  box.tpl  cargo.tl  fail.tl  fail_fancy.tl  ok.tl  ok.tpl  ok_fancy.tl  popeye.tl  popeye.tpl  section.tl  underline.tl  underline.tpl
