[package]
authors = ["Pablo Navais <pnavais@gmail.com>"]
categories = ["command-line-utilities"]
description = "A simple title maker."
homepage = "https://github.com/pnavais/titular"
name = "titular"
repository = "https://github.com/pnavais/titular"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
term_size = "0.3.2"
clap = "2.33.3"
lazy_static = "1.4.0"
dirs-next = "2.0.0"
atty = "0.2.14"
thiserror = "1.0.30"
ansi_term = "0.12.1"
glob = "0.3.0"
serde = { version = "1.0.130", features = ["derive"] }
toml = "0.5.8"
shellexpand = "2.1.0"
strum = "0.22"
strum_macros = "0.22"
regex = "1.5.4"
truncrate = "0.1.3"
unicode-width = "0.1.9"
strip-ansi-escapes = "0.1.1"
edit = "0.1.3"
whoami = "1.2.0"
reqwest = { version = "0.11.6", features = ["stream"] }
indicatif = "0.16.2"
futures-util = "0.3.17"
async-std = { version = "1.10.0", features = ["attributes", "tokio1"] }
url = "2.2.2"