[package]
authors = ["Pablo Navais <pnavais@gmail.com>"]
categories = ["command-line-utilities"]
description = "A simple title maker."
homepage = "https://github.com/pnavais/titular"
name = "titular"
repository = "https://github.com/pnavais/titular"
version = "0.1.0"
edition = "2018"

[features]
default = [
    "application",
    "fetcher",
]

# Feature required for titular the application. Should be disabled when depending on
# titular as a library.
application = [
    "atty",
    "clap",
]

# Feature required for the automatic/manual download of missing templates
fetcher = [
    "reqwest",
    "indicatif",
    "futures-util",
    "async-std",
    "url",
]

[dependencies]
term_size = "0.3.2"
lazy_static = "1.4.0"
dirs-next = "2.0.0"
atty = { version = "0.2.14", optional = true }
thiserror = "1.0.30"
ansi_term = "0.12.1"
glob = "0.3.0"
serde = { version = "1.0.130", features = ["derive"] }
toml = "0.5.8"
shellexpand = "2.1.0"
strum = "0.22"
strum_macros = "0.22"
regex = "1.5.4"
truncrate = "0.1.3"
unicode-width = "0.1.9"
strip-ansi-escapes = "0.1.1"
edit = "0.1.3"
whoami = "1.2.0"
indicatif = { version = "0.16.2", optional = true }
futures-util = { version = "0.3.17", optional = true }
url = { version = "2.2.2", optional = true }
chrono = "0.4.19"

[dependencies.clap]
version = "2.33.3"
optional = true
default-features = false
features = ["suggestions", "color", "wrap_help"]

[dependencies.reqwest]
version = "0.11.6"
optional = true
default-features = false
features = ["stream", "native-tls"]

[dependencies.async-std]
version = "1.10.0"
optional = true
features = ["attributes", "tokio1"]

[build-dependencies]
clap = { version = "2.33.3", optional = true }

[profile.release]
lto = true