[package]
name = "titular"
version = "0.1.0"
edition = "2021"
authors = ["Pablo Navais <pnavais@gmail.com>"]
description = "A command line tool to display fancy titles in your terminal"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/pnavais/titular"
documentation = "https://docs.rs/titular"
build = "build.rs"
keywords = ["cli", "text", "syntax-highlighting", "formatting"]
categories = ["command-line-utilities", "text-processing"]

[lib]
name = "titular"
path = "src/lib.rs"

[[bin]]
name = "titular"
path = "src/bin/titular/main.rs"

[dependencies]
ansi-parser = "0.9"
bincode = { version = "2.0", optional = true, features = ["serde"] }
chrono = "0.4"
clap = { version = "4.5.4", features = ["derive", "cargo", "wrap_help"] }
console = "0.15"
crossterm = { version = "0.29", optional = true }
ctrlc = { version = "3.2.5", optional = true, features = ["termination"] }
directories = "6"
dirs-next = "2"
edit = "0.1.4"
glob = "0.3.1"
indicatif = { version = "0.17", optional = true }
isahc = { version = "1.7.2", optional = true }
nu-ansi-term = "0.50"
once_cell = "1.19"
pager = { version = "0.16.1" }
print-positions = "0.6.1"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
shellexpand = "3.1"
smol = { version = "2.0.2", optional = true }
strum_macros = "0.27"
syntect = { version = "5.1.0", optional = true }
tempfile = "3.10.1"
term_size = { version = "0.3.2", optional = true }
thiserror = "2"
toml = "0.8.12"
url = { version = "2.5.4", optional = true }
whoami = "1.5"
regex = "1.10"
tera = { version = "1", default-features = false }
unicode-segmentation = "1.12.0"

[build-dependencies]
syntect = { version = "5.2.0", features = ["dump-load"], optional = true }
bincode = { version = "2.0", optional = true, features = ["serde"] }
serde = { version = "1.0.197", features = ["derive"] }
sublime-color-scheme = { version = "0.1.2", optional = true }
nu-ansi-term = "0.50"
build-print = "0.1.1"

[dev-dependencies]
tempfile = "3.10"

[features]
default = ["application"]
application = ["minimal", "fetcher"]
minimal = ["term_size"]
full_application = ["fetcher", "display"]
fetcher = ["ctrlc", "crossterm", "indicatif", "isahc", "url", "smol"]
display = [
    "bincode-build",
    "crossterm",
    "syntect-build",
    "sublime-color-scheme",
]
display-themes = ["display"]
syntect-build = ["dep:syntect"]
bincode-build = ["dep:bincode"]
sublime-color-scheme = ["dep:sublime-color-scheme"]

[profile.release]
lto = true
strip = true
codegen-units = 1
